# right-window

./: CMakeLists.txt  LICENSE.md  README.md  available_wm.cpp  available_wm.h  directions.h  find_next_window.cpp  find_next_window.h  main.cpp  rw_util.h  subprocess.cpp  subprocess.h  window_clipping.h  wm_abstract.h
bspwm/: bspwm.cpp  bspwm.h
x11wm/: x11wm.cpp  x11wm.h
